--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
+    
+    <title>Leaderboard</title>
 </head>
 <body>
-GoogleCloudReady Facilitator Program Leaderboard - Mukesh Patel School of Technology Management & Engineering
+
+<h2>GoogleCloudReady Facilitator Program Leaderboard - Mukesh Patel School of Technology Management & Engineering</h2>
 <br>
-Updated on May 01 2022 14:30:00 IST
-
-
+<p>Updated on May 01 2022 | 15:06:00 IST</p>
 <br><br>
 <table>
     <thead>
@@ -1700,6 +1702,5 @@ Updated on May 01 2022 14:30:00 IST
         </tr>
     </tbody>
 </table>
-   
 </body>
 </html>
