--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <body>
 <h2>GoogleCloudReady Facilitator Program Leaderboard - Mukesh Patel School of Technology Management & Engineering</h2>
 <br>
-<p>Details updated on May 12 2022 | 14:31 IST</p>
-<p>Webpage updated on May 12 2022 | 14:33 IST</p>
+<p>Details updated on May 13 2022 | 14:39 IST</p>
+<p>Webpage updated on May 13 2022 | 14:55 IST</p>
 <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names..">
 <br><br>
 <table id="table">
@@ -31,23 +31,23 @@
         <tr>
             <td>1</td>
             <td>Yash Sutaria</td>
-            <td>19</td>
+            <td>22</td>
             <td>10</td>
-            <td>29</td>
+            <td>32</td>
         </tr>
         <tr>
             <td>2</td>
             <td>Tirth Govani</td>
             <td>15</td>
-            <td>6</td>
-            <td>21</td>
+            <td>9</td>
+            <td>24</td>
         </tr>
         <tr>
             <td>3</td>
             <td>Devesh ranjan kharade</td>
             <td>12</td>
-            <td>5</td>
-            <td>17</td>
+            <td>6</td>
+            <td>18</td>
         </tr>
         <tr>
             <td>4</td>
@@ -72,30 +72,30 @@
         </tr>
         <tr>
             <td>7</td>
+            <td>Akshat jain</td>
+            <td>8</td>
+            <td>6</td>
+            <td>14</td>
+        </tr>
+        <tr>
+            <td>8</td>
+            <td>Yashi Srivastava</td>
+            <td>9</td>
+            <td>5</td>
+            <td>14</td>
+        </tr>
+        <tr>
+            <td>9</td>
             <td>Jaykumar Patel</td>
             <td>8</td>
             <td>5</td>
             <td>13</td>
         </tr>
         <tr>
-            <td>8</td>
-            <td>Akshat jain</td>
-            <td>8</td>
-            <td>4</td>
-            <td>12</td>
-        </tr>
-        <tr>
-            <td>9</td>
+            <td>10</td>
             <td>Amit Agarwal</td>
             <td>11</td>
             <td>1</td>
-            <td>12</td>
-        </tr>
-        <tr>
-            <td>10</td>
-            <td>Yashi Srivastava</td>
-            <td>7</td>
-            <td>5</td>
             <td>12</td>
         </tr>
         <tr>
@@ -136,9 +136,9 @@
         <tr>
             <td>16</td>
             <td>Srijeev Bhowal</td>
-            <td>7</td>
+            <td>8</td>
             <td>2</td>
-            <td>9</td>
+            <td>10</td>
         </tr>
         <tr>
             <td>17</td>
@@ -149,31 +149,31 @@
         </tr>
         <tr>
             <td>18</td>
-            <td>Madhur Manoj Jajodia</td>
-            <td>7</td>
-            <td>0</td>
-            <td>7</td>
+            <td>Komal Gokani</td>
+            <td>5</td>
+            <td>3</td>
+            <td>8</td>
         </tr>
         <tr>
             <td>19</td>
-            <td>Vishal Lotan Patil</td>
+            <td>Ishwari Pramod Deore</td>
             <td>7</td>
             <td>0</td>
             <td>7</td>
         </tr>
         <tr>
             <td>20</td>
-            <td>Ishwari Pramod Deore</td>
-            <td>6</td>
+            <td>Madhur Manoj Jajodia</td>
+            <td>7</td>
             <td>0</td>
-            <td>6</td>
+            <td>7</td>
         </tr>
         <tr>
             <td>21</td>
-            <td>Komal Gokani</td>
-            <td>3</td>
-            <td>3</td>
-            <td>6</td>
+            <td>Vishal Lotan Patil</td>
+            <td>7</td>
+            <td>0</td>
+            <td>7</td>
         </tr>
         <tr>
             <td>22</td>
@@ -254,149 +254,149 @@
         </tr>
         <tr>
             <td>33</td>
+            <td>Shivam Sharma</td>
+            <td>3</td>
+            <td>0</td>
+            <td>3</td>
+        </tr>
+        <tr>
+            <td>34</td>
             <td>Aman Singh Bhogal</td>
             <td>2</td>
             <td>0</td>
             <td>2</td>
         </tr>
         <tr>
-            <td>34</td>
+            <td>35</td>
             <td>Amruta Anil Patil</td>
             <td>2</td>
             <td>0</td>
             <td>2</td>
         </tr>
         <tr>
-            <td>35</td>
+            <td>36</td>
             <td>AYUSH KAST</td>
             <td>1</td>
             <td>1</td>
             <td>2</td>
         </tr>
         <tr>
-            <td>36</td>
+            <td>37</td>
             <td>Bhushan Karape</td>
             <td>2</td>
             <td>0</td>
             <td>2</td>
         </tr>
         <tr>
-            <td>37</td>
+            <td>38</td>
             <td>Lokesh Anil Bhamare</td>
             <td>1</td>
             <td>1</td>
             <td>2</td>
         </tr>
         <tr>
-            <td>38</td>
+            <td>39</td>
             <td>Omkar Pardeshi</td>
             <td>2</td>
             <td>0</td>
             <td>2</td>
         </tr>
         <tr>
-            <td>39</td>
+            <td>40</td>
             <td>Pruthvi Rajendra Kolhe</td>
             <td>2</td>
             <td>0</td>
             <td>2</td>
         </tr>
         <tr>
-            <td>40</td>
+            <td>41</td>
             <td>Rohit Achyut Tupke</td>
             <td>2</td>
             <td>0</td>
             <td>2</td>
         </tr>
         <tr>
-            <td>41</td>
+            <td>42</td>
             <td>Sidhesh Sanjeev Joshi</td>
             <td>2</td>
             <td>0</td>
             <td>2</td>
         </tr>
         <tr>
-            <td>42</td>
+            <td>43</td>
             <td>Aditya Mantri</td>
             <td>1</td>
             <td>0</td>
             <td>1</td>
         </tr>
         <tr>
-            <td>43</td>
+            <td>44</td>
             <td>Bhavesh Yogesh Kolhe</td>
             <td>1</td>
             <td>0</td>
             <td>1</td>
         </tr>
         <tr>
-            <td>44</td>
+            <td>45</td>
             <td>Bhushan Suresh Mahajan</td>
             <td>0</td>
             <td>1</td>
             <td>1</td>
         </tr>
         <tr>
-            <td>45</td>
+            <td>46</td>
             <td>Edmond Jonathan Jeremiah</td>
             <td>1</td>
             <td>0</td>
             <td>1</td>
         </tr>
         <tr>
-            <td>46</td>
+            <td>47</td>
             <td>Jadhav samta sanjay</td>
             <td>1</td>
             <td>0</td>
             <td>1</td>
         </tr>
         <tr>
-            <td>47</td>
+            <td>48</td>
             <td>Prathmesh Badgujar</td>
             <td>1</td>
             <td>0</td>
             <td>1</td>
         </tr>
         <tr>
-            <td>48</td>
+            <td>49</td>
             <td>Rahul Noolu</td>
             <td>1</td>
             <td>0</td>
             <td>1</td>
         </tr>
         <tr>
-            <td>49</td>
+            <td>50</td>
             <td>Sagar dada bidgar</td>
             <td>1</td>
             <td>0</td>
             <td>1</td>
         </tr>
         <tr>
-            <td>50</td>
+            <td>51</td>
             <td>Sanskar Shendge</td>
             <td>1</td>
             <td>0</td>
             <td>1</td>
         </tr>
         <tr>
-            <td>51</td>
+            <td>52</td>
             <td>Sara Jagdish Pardeshi</td>
             <td>1</td>
             <td>0</td>
             <td>1</td>
         </tr>
         <tr>
-            <td>52</td>
+            <td>53</td>
             <td>Sharvari Santosh Sulakhe</td>
             <td>0</td>
             <td>1</td>
-            <td>1</td>
-        </tr>
-        <tr>
-            <td>53</td>
-            <td>Shivam Sharma</td>
-            <td>1</td>
-            <td>0</td>
             <td>1</td>
         </tr>
         <tr>
@@ -1868,5 +1868,7 @@
 <br>
 <br>
 <br>
+<br>
+GoogleCloudReady Facilitator Program
 </body>
 </html>
