--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <link rel="icon" href="https://play-lh.googleusercontent.com/RyoQTmHnxsxPYabsETmWVXHtLorVh_yOO48hsdv2VmI-Uki4qt5c5vV1cicJODV56A4" type="image/icon type">
     <title>GCR Leaderboard</title>
 </head>
+<!-- Formula for calculating Milestone Completion
+    Milestone Progress
+    =IF(AND(C2>=40,D2>=20),"ULTIMATE",IF(AND(C2>=30,D2>=15),3,IF(AND(C2>=20,D2>=10),2,IF(AND(C2>=10,D2>=5),1,""))))
+-->
 <body>
 <h2>GoogleCloudReady Facilitator Program Leaderboard - Mukesh Patel School of Technology Management & Engineering</h2>
 <br>
