--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+   
     <script type="text/javascript" src="script.js"></script>
     <link rel="icon" href="https://play-lh.googleusercontent.com/RyoQTmHnxsxPYabsETmWVXHtLorVh_yOO48hsdv2VmI-Uki4qt5c5vV1cicJODV56A4" type="image/icon type">
     <title>GCR Leaderboard</title>
@@ -18,7 +19,15 @@
 <h2>GoogleCloudReady Facilitator Program Leaderboard - Mukesh Patel School of Technology Management & Engineering</h2>
 <br>
 <p>Details updated on May 13 2022 | 14:39 IST</p>
-<p>Webpage updated on May 13 2022 | 14:55 IST</p>
+<p>Webpage updated on May 14 2022 | 13:27 IST</p>
+<br>
+<a target="_blank" href="https://events.withgoogle.com/googlecloudready-facilitator-program/#program-syllabus">PROGRAM SYLLABUS</a>
+<a target="_blank" href="https://github.com/guys-in-the-cloud/cloud-skill-boosts">SOLUTIONS</a>
+
+<br>
+
+
+
 <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names..">
 <br><br>
 <table id="table">
@@ -1873,6 +1882,10 @@
 <br>
 <br>
 <br>
-GoogleCloudReady Facilitator Program
+<a target="_blank" href="https://github.com/nityoday/gcr-leaderboard">Feel free to contribute</a>
+<div style="width: 30px; height: 30px;">
+GCR
+</div>
+
 </body>
 </html>
