--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 <body>
 <h2>GoogleCloudReady Facilitator Program Leaderboard - Mukesh Patel School of Technology Management & Engineering</h2>
 <br>
-<p>Details updated on May 14 2022 | 14:37 IST</p>
-<p>Webpage updated on May 14 2022 | 14:46 IST</p>
+<p>Details updated on May 15 2022 | 14:31 IST</p>
+<p>Webpage updated on May 15 2022 | 17:06 IST</p>
 <br>
 <a target="_blank" href="https://events.withgoogle.com/googlecloudready-facilitator-program/#program-syllabus">PROGRAM SYLLABUS</a>
 <a target="_blank" href="https://github.com/guys-in-the-cloud/cloud-skill-boosts">SOLUTIONS</a>
@@ -35,10 +35,9 @@
         <tr>
             <td>Rank</td>
             <td>Student Name</td>
-            <td># of Quests CompleteNo.</td>
+            <td>No. of Quests Completed</td>
             <td>No. of Skill Badges Completed</td>
             <td>Total</td>
-            <td>Milestone Progress</td>
         </tr>
     </thead>
     <tbody>
@@ -48,62 +47,55 @@
             <td>23</td>
             <td>10</td>
             <td>33</td>
-            <td>2</td>
         </tr>
         <tr>
             <td>2</td>
             <td>Tirth Govani</td>
-            <td>15</td>
-            <td>9</td>
-            <td>24</td>
-            <td>1</td>
+            <td>18</td>
+            <td>10</td>
+            <td>28</td>
         </tr>
         <tr>
             <td>3</td>
             <td>Shaurya Saxena</td>
-            <td>12</td>
-            <td>9</td>
-            <td>21</td>
-            <td>1</td>
+            <td>15</td>
+            <td>10</td>
+            <td>25</td>
         </tr>
         <tr>
             <td>4</td>
-            <td>Devesh ranjan kharade</td>
+            <td>Monu Pawar</td>
             <td>12</td>
-            <td>6</td>
-            <td>18</td>
-            <td>1</td>
+            <td>8</td>
+            <td>20</td>
         </tr>
         <tr>
             <td>5</td>
-            <td>Monu Pawar</td>
-            <td>10</td>
+            <td>Devesh ranjan kharade</td>
+            <td>12</td>
             <td>7</td>
-            <td>17</td>
-            <td>1</td>
+            <td>19</td>
         </tr>
         <tr>
             <td>6</td>
+            <td>Akshat jain</td>
+            <td>10</td>
+            <td>6</td>
+            <td>16</td>
+        </tr>
+        <tr>
+            <td>7</td>
             <td>Aditya Rajendra Hyalij</td>
             <td>10</td>
             <td>5</td>
             <td>15</td>
-            <td>1</td>
         </tr>
         <tr>
-            <td>7</td>
+            <td>8</td>
             <td>Yashi Srivastava</td>
             <td>10</td>
             <td>5</td>
             <td>15</td>
-            <td>1</td>
-        </tr>
-        <tr>
-            <td>8</td>
-            <td>Akshat jain</td>
-            <td>8</td>
-            <td>6</td>
-            <td>14</td>
         </tr>
         <tr>
             <td>9</td>
@@ -142,31 +134,31 @@
         </tr>
         <tr>
             <td>14</td>
+            <td>Jay Patil</td>
+            <td>6</td>
+            <td>5</td>
+            <td>11</td>
+        </tr>
+        <tr>
+            <td>15</td>
+            <td>Komal Gokani</td>
+            <td>6</td>
+            <td>5</td>
+            <td>11</td>
+        </tr>
+        <tr>
+            <td>16</td>
             <td>Poornima Prakash Mahajan</td>
             <td>11</td>
             <td>0</td>
             <td>11</td>
         </tr>
         <tr>
-            <td>15</td>
-            <td>Jay Patil</td>
-            <td>5</td>
-            <td>5</td>
-            <td>10</td>
-        </tr>
-        <tr>
-            <td>16</td>
+            <td>17</td>
             <td>Simoni Thanvi</td>
             <td>6</td>
             <td>4</td>
             <td>10</td>
-        </tr>
-        <tr>
-            <td>17</td>
-            <td>Komal Gokani</td>
-            <td>5</td>
-            <td>4</td>
-            <td>9</td>
         </tr>
         <tr>
             <td>18</td>
@@ -177,45 +169,45 @@
         </tr>
         <tr>
             <td>19</td>
-            <td>Ishwari Pramod Deore</td>
-            <td>7</td>
-            <td>0</td>
-            <td>7</td>
+            <td>Singu Aditya</td>
+            <td>5</td>
+            <td>3</td>
+            <td>8</td>
         </tr>
         <tr>
             <td>20</td>
-            <td>Madhur Manoj Jajodia</td>
+            <td>Aman Singh Bhogal</td>
             <td>7</td>
             <td>0</td>
             <td>7</td>
         </tr>
         <tr>
             <td>21</td>
-            <td>Singu Aditya</td>
-            <td>4</td>
-            <td>3</td>
+            <td>Ishwari Pramod Deore</td>
+            <td>7</td>
+            <td>0</td>
             <td>7</td>
         </tr>
         <tr>
             <td>22</td>
-            <td>Vishal Lotan Patil</td>
+            <td>Madhur Manoj Jajodia</td>
             <td>7</td>
             <td>0</td>
             <td>7</td>
         </tr>
         <tr>
             <td>23</td>
+            <td>Vishal Lotan Patil</td>
+            <td>7</td>
+            <td>0</td>
+            <td>7</td>
+        </tr>
+        <tr>
+            <td>24</td>
             <td>Akash Sanjay Kolhe</td>
             <td>6</td>
             <td>0</td>
             <td>6</td>
-        </tr>
-        <tr>
-            <td>24</td>
-            <td>Aman Singh Bhogal</td>
-            <td>5</td>
-            <td>0</td>
-            <td>5</td>
         </tr>
         <tr>
             <td>25</td>
@@ -317,189 +309,189 @@
         </tr>
         <tr>
             <td>39</td>
+            <td>Jadhav samta sanjay</td>
+            <td>2</td>
+            <td>0</td>
+            <td>2</td>
+        </tr>
+        <tr>
+            <td>40</td>
             <td>Lokesh Anil Bhamare</td>
             <td>1</td>
             <td>1</td>
             <td>2</td>
         </tr>
         <tr>
-            <td>40</td>
+            <td>41</td>
             <td>Nitin kashinath hadpe</td>
             <td>1</td>
             <td>1</td>
             <td>2</td>
         </tr>
         <tr>
-            <td>41</td>
+            <td>42</td>
             <td>Omkar Pardeshi</td>
             <td>2</td>
             <td>0</td>
             <td>2</td>
         </tr>
         <tr>
-            <td>42</td>
-            <td>Rohit Achyut Tupke</td>
-            <td>2</td>
-            <td>0</td>
-            <td>2</td>
-        </tr>
-        <tr>
             <td>43</td>
-            <td>Sidhesh Sanjeev Joshi</td>
+            <td>Rahul Noolu</td>
             <td>2</td>
             <td>0</td>
             <td>2</td>
         </tr>
         <tr>
             <td>44</td>
+            <td>Rohit Achyut Tupke</td>
+            <td>2</td>
+            <td>0</td>
+            <td>2</td>
+        </tr>
+        <tr>
+            <td>45</td>
+            <td>Sidhesh Sanjeev Joshi</td>
+            <td>2</td>
+            <td>0</td>
+            <td>2</td>
+        </tr>
+        <tr>
+            <td>46</td>
             <td>Aditya Mantri</td>
             <td>1</td>
             <td>0</td>
             <td>1</td>
         </tr>
         <tr>
-            <td>45</td>
-            <td>Bhavesh Yogesh Kolhe</td>
-            <td>1</td>
-            <td>0</td>
-            <td>1</td>
-        </tr>
-        <tr>
-            <td>46</td>
-            <td>Bhushan Suresh Mahajan</td>
-            <td>0</td>
-            <td>1</td>
-            <td>1</td>
-        </tr>
-        <tr>
             <td>47</td>
-            <td>Edmond Jonathan Jeremiah</td>
+            <td>Advait Upendra Shukla</td>
             <td>1</td>
             <td>0</td>
             <td>1</td>
         </tr>
         <tr>
             <td>48</td>
-            <td>Jadhav samta sanjay</td>
+            <td>Bhavesh Yogesh Kolhe</td>
             <td>1</td>
             <td>0</td>
             <td>1</td>
         </tr>
         <tr>
             <td>49</td>
-            <td>Prathmesh Badgujar</td>
-            <td>1</td>
+            <td>Bhushan Suresh Mahajan</td>
             <td>0</td>
+            <td>1</td>
             <td>1</td>
         </tr>
         <tr>
             <td>50</td>
-            <td>Rahul Noolu</td>
+            <td>Edmond Jonathan Jeremiah</td>
             <td>1</td>
             <td>0</td>
             <td>1</td>
         </tr>
         <tr>
             <td>51</td>
-            <td>Sagar dada bidgar</td>
+            <td>Prathmesh Badgujar</td>
             <td>1</td>
             <td>0</td>
             <td>1</td>
         </tr>
         <tr>
             <td>52</td>
-            <td>Sanskar Shendge</td>
+            <td>Sagar dada bidgar</td>
             <td>1</td>
             <td>0</td>
             <td>1</td>
         </tr>
         <tr>
             <td>53</td>
-            <td>Sara Jagdish Pardeshi</td>
+            <td>Sanskar Shendge</td>
             <td>1</td>
             <td>0</td>
             <td>1</td>
         </tr>
         <tr>
             <td>54</td>
+            <td>Sara Jagdish Pardeshi</td>
+            <td>1</td>
+            <td>0</td>
+            <td>1</td>
+        </tr>
+        <tr>
+            <td>55</td>
             <td>Sharvari Santosh Sulakhe</td>
             <td>0</td>
             <td>1</td>
             <td>1</td>
         </tr>
         <tr>
-            <td>55</td>
+            <td>56</td>
             <td>Vaishnavi Arvind Nikam</td>
             <td>1</td>
             <td>0</td>
             <td>1</td>
         </tr>
         <tr>
-            <td>56</td>
+            <td>57</td>
             <td>Aabha Shrirang Damle</td>
             <td>0</td>
             <td>0</td>
             <td>0</td>
         </tr>
         <tr>
-            <td>57</td>
+            <td>58</td>
             <td>Aaditya Siddheshwar Bhadane</td>
             <td>0</td>
             <td>0</td>
             <td>0</td>
         </tr>
         <tr>
-            <td>58</td>
+            <td>59</td>
             <td>Abbhuday Pratap Singh</td>
             <td>0</td>
             <td>0</td>
             <td>0</td>
         </tr>
         <tr>
-            <td>59</td>
+            <td>60</td>
             <td>Abhinav Jain</td>
             <td>0</td>
             <td>0</td>
             <td>0</td>
         </tr>
         <tr>
-            <td>60</td>
+            <td>61</td>
             <td>Abhinav Jindal</td>
             <td>0</td>
             <td>0</td>
             <td>0</td>
         </tr>
         <tr>
-            <td>61</td>
+            <td>62</td>
             <td>Abhinav Sharma</td>
             <td>0</td>
             <td>0</td>
             <td>0</td>
         </tr>
         <tr>
-            <td>62</td>
+            <td>63</td>
             <td>Aditya Pradeep Khalkar</td>
             <td>0</td>
             <td>0</td>
             <td>0</td>
         </tr>
         <tr>
-            <td>63</td>
+            <td>64</td>
             <td>Aditya Waje</td>
             <td>0</td>
             <td>0</td>
             <td>0</td>
         </tr>
         <tr>
-            <td>64</td>
-            <td>Adityavardhan Tiwari</td>
-            <td>0</td>
-            <td>0</td>
-            <td>0</td>
-        </tr>
-        <tr>
             <td>65</td>
-            <td>Advait Upendra Shukla</td>
+            <td>Adityavardhan Tiwari</td>
             <td>0</td>
             <td>0</td>
             <td>0</td>
