--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <title>GCR Leaderboard</title>
 </head>
 <!-- Formula for calculating Milestone Completion
-    Milestone Progress
+    Milestone Progress :
     =IF(AND(B2>=40,C2>=20),"ULTIMATE",IF(AND(B2>=30,C2>=15),3,IF(AND(B2>=20,C2>=10),2,IF(AND(B2>=10,C2>=5),1,""))))
 -->
 <body>
 <h2>GoogleCloudReady Facilitator Program Leaderboard - Mukesh Patel School of Technology Management & Engineering</h2>
 <br>
-<p>Details updated on May 16 2022 | 14:21 IST</p>
-<p>Webpage updated on May 16 2022 | 20:44 IST</p>
+<p>Details updated on May 18 2022 | 14:26 IST</p>
+<p>Webpage updated on May 18 2022 | 16:38 IST</p>
 <br>
 <a target="_blank" href="https://events.withgoogle.com/googlecloudready-facilitator-program/#program-syllabus">PROGRAM SYLLABUS</a>
 <a target="_blank" href="https://github.com/guys-in-the-cloud/cloud-skill-boosts">SOLUTIONS</a>
@@ -44,9 +44,9 @@
         <tr>
             <td>1</td>
             <td>Yash Sutaria</td>
-            <td>24</td>
-            <td>12</td>
-            <td>36</td>
+            <td>26</td>
+            <td>13</td>
+            <td>39</td>
         </tr>
         <tr>
             <td>2</td>
@@ -58,9 +58,9 @@
         <tr>
             <td>3</td>
             <td>Shaurya Saxena</td>
-            <td>16</td>
+            <td>18</td>
             <td>10</td>
-            <td>26</td>
+            <td>28</td>
         </tr>
         <tr>
             <td>4</td>
@@ -92,28 +92,28 @@
         </tr>
         <tr>
             <td>8</td>
-            <td>Yashi Srivastava</td>
+            <td>Komal Gokani</td>
             <td>10</td>
             <td>5</td>
             <td>15</td>
         </tr>
         <tr>
             <td>9</td>
-            <td>Srijeev Bhowal</td>
-            <td>11</td>
-            <td>3</td>
-            <td>14</td>
+            <td>Yashi Srivastava</td>
+            <td>10</td>
+            <td>5</td>
+            <td>15</td>
         </tr>
         <tr>
             <td>10</td>
-            <td>Jaykumar Patel</td>
-            <td>8</td>
-            <td>5</td>
-            <td>13</td>
+            <td>Srijeev Bhowal</td>
+            <td>12</td>
+            <td>3</td>
+            <td>15</td>
         </tr>
         <tr>
             <td>11</td>
-            <td>Komal Gokani</td>
+            <td>Jaykumar Patel</td>
             <td>8</td>
             <td>5</td>
             <td>13</td>
@@ -127,44 +127,44 @@
         </tr>
         <tr>
             <td>13</td>
-            <td>Dhruvi Sethi</td>
-            <td>7</td>
-            <td>4</td>
-            <td>11</td>
-        </tr>
-        <tr>
-            <td>14</td>
-            <td>Divya Ranjan Kharade</td>
-            <td>10</td>
-            <td>1</td>
-            <td>11</td>
-        </tr>
-        <tr>
-            <td>15</td>
             <td>Jay Patil</td>
             <td>6</td>
             <td>5</td>
             <td>11</td>
         </tr>
         <tr>
+            <td>14</td>
+            <td>Dhruvi Sethi</td>
+            <td>7</td>
+            <td>4</td>
+            <td>11</td>
+        </tr>
+        <tr>
+            <td>15</td>
+            <td>Singu Aditya</td>
+            <td>7</td>
+            <td>4</td>
+            <td>11</td>
+        </tr>
+        <tr>
             <td>16</td>
+            <td>Divya Ranjan Kharade</td>
+            <td>10</td>
+            <td>1</td>
+            <td>11</td>
+        </tr>
+        <tr>
+            <td>17</td>
             <td>Poornima Prakash Mahajan</td>
             <td>11</td>
             <td>0</td>
             <td>11</td>
         </tr>
         <tr>
-            <td>17</td>
+            <td>18</td>
             <td>Simoni Thanvi</td>
             <td>6</td>
             <td>4</td>
-            <td>10</td>
-        </tr>
-        <tr>
-            <td>18</td>
-            <td>Singu Aditya</td>
-            <td>7</td>
-            <td>3</td>
             <td>10</td>
         </tr>
         <tr>
@@ -204,51 +204,51 @@
         </tr>
         <tr>
             <td>24</td>
+            <td>DIYA GANDHI</td>
+            <td>4</td>
+            <td>2</td>
+            <td>6</td>
+        </tr>
+        <tr>
+            <td>25</td>
+            <td>Sparsh Khandelwal</td>
+            <td>4</td>
+            <td>2</td>
+            <td>6</td>
+        </tr>
+        <tr>
+            <td>26</td>
             <td>Akash Sanjay Kolhe</td>
             <td>6</td>
             <td>0</td>
             <td>6</td>
         </tr>
         <tr>
-            <td>25</td>
-            <td>DIYA GANDHI</td>
-            <td>3</td>
-            <td>2</td>
-            <td>5</td>
-        </tr>
-        <tr>
-            <td>26</td>
-            <td>Prashant Madhukar Bagul</td>
-            <td>3</td>
-            <td>2</td>
-            <td>5</td>
-        </tr>
-        <tr>
             <td>27</td>
-            <td>Sparsh Khandelwal</td>
+            <td>Amruta Anil Patil</td>
             <td>3</td>
             <td>2</td>
             <td>5</td>
         </tr>
         <tr>
             <td>28</td>
-            <td>Amruta Anil Patil</td>
+            <td>Prashant Madhukar Bagul</td>
+            <td>3</td>
             <td>2</td>
-            <td>2</td>
-            <td>4</td>
+            <td>5</td>
         </tr>
         <tr>
             <td>29</td>
-            <td>Aniket Bhagwan Ahire</td>
-            <td>2</td>
-            <td>2</td>
+            <td>Ayush Sachin Ghatkar</td>
+            <td>1</td>
+            <td>3</td>
             <td>4</td>
         </tr>
         <tr>
             <td>30</td>
-            <td>Ayush Sachin Ghatkar</td>
-            <td>1</td>
-            <td>3</td>
+            <td>Aniket Bhagwan Ahire</td>
+            <td>2</td>
+            <td>2</td>
             <td>4</td>
         </tr>
         <tr>
@@ -281,63 +281,63 @@
         </tr>
         <tr>
             <td>35</td>
-            <td>Sai Jadhav</td>
+            <td>Rahul Noolu</td>
             <td>3</td>
             <td>0</td>
             <td>3</td>
         </tr>
         <tr>
             <td>36</td>
-            <td>Shivam Sharma</td>
+            <td>Sai Jadhav</td>
             <td>3</td>
             <td>0</td>
             <td>3</td>
         </tr>
         <tr>
             <td>37</td>
+            <td>Shivam Sharma</td>
+            <td>3</td>
+            <td>0</td>
+            <td>3</td>
+        </tr>
+        <tr>
+            <td>38</td>
             <td>AYUSH KAST</td>
             <td>1</td>
             <td>1</td>
             <td>2</td>
         </tr>
         <tr>
-            <td>38</td>
-            <td>Bhushan Karape</td>
-            <td>2</td>
-            <td>0</td>
-            <td>2</td>
-        </tr>
-        <tr>
             <td>39</td>
-            <td>Jadhav samta sanjay</td>
-            <td>2</td>
-            <td>0</td>
-            <td>2</td>
-        </tr>
-        <tr>
-            <td>40</td>
             <td>Lokesh Anil Bhamare</td>
             <td>1</td>
             <td>1</td>
             <td>2</td>
         </tr>
         <tr>
-            <td>41</td>
+            <td>40</td>
             <td>Nitin kashinath hadpe</td>
             <td>1</td>
             <td>1</td>
             <td>2</td>
         </tr>
         <tr>
+            <td>41</td>
+            <td>Bhushan Karape</td>
+            <td>2</td>
+            <td>0</td>
+            <td>2</td>
+        </tr>
+        <tr>
             <td>42</td>
-            <td>Omkar Pardeshi</td>
+            <td>Jadhav samta sanjay</td>
             <td>2</td>
             <td>0</td>
             <td>2</td>
         </tr>
         <tr>
             <td>43</td>
-            <td>Rahul Noolu</td>
+            <td>Omkar Pardeshi</td>
             <td>2</td>
             <td>0</td>
             <td>2</td>
@@ -358,72 +358,72 @@
         </tr>
         <tr>
             <td>46</td>
-            <td>Aditya Mantri</td>
-            <td>1</td>
-            <td>0</td>
-            <td>1</td>
-        </tr>
-        <tr>
-            <td>47</td>
-            <td>Advait Upendra Shukla</td>
-            <td>1</td>
-            <td>0</td>
-            <td>1</td>
-        </tr>
-        <tr>
-            <td>48</td>
-            <td>Bhavesh Yogesh Kolhe</td>
-            <td>1</td>
-            <td>0</td>
-            <td>1</td>
-        </tr>
-        <tr>
-            <td>49</td>
             <td>Bhushan Suresh Mahajan</td>
             <td>0</td>
             <td>1</td>
             <td>1</td>
         </tr>
         <tr>
+            <td>47</td>
+            <td>Sharvari Santosh Sulakhe</td>
+            <td>0</td>
+            <td>1</td>
+            <td>1</td>
+        </tr>
+        <tr>
+            <td>48</td>
+            <td>Aditya Mantri</td>
+            <td>1</td>
+            <td>0</td>
+            <td>1</td>
+        </tr>
+        <tr>
+            <td>49</td>
+            <td>Advait Upendra Shukla</td>
+            <td>1</td>
+            <td>0</td>
+            <td>1</td>
+        </tr>
+        <tr>
             <td>50</td>
-            <td>Edmond Jonathan Jeremiah</td>
+            <td>Bhavesh Yogesh Kolhe</td>
             <td>1</td>
             <td>0</td>
             <td>1</td>
         </tr>
         <tr>
             <td>51</td>
-            <td>Prathmesh Badgujar</td>
+            <td>Edmond Jonathan Jeremiah</td>
             <td>1</td>
             <td>0</td>
             <td>1</td>
         </tr>
         <tr>
             <td>52</td>
-            <td>Sagar dada bidgar</td>
+            <td>Prathmesh Badgujar</td>
             <td>1</td>
             <td>0</td>
             <td>1</td>
         </tr>
         <tr>
             <td>53</td>
-            <td>Sanskar Shendge</td>
+            <td>Sagar dada bidgar</td>
             <td>1</td>
             <td>0</td>
             <td>1</td>
         </tr>
         <tr>
             <td>54</td>
-            <td>Sara Jagdish Pardeshi</td>
+            <td>Sanskar Shendge</td>
             <td>1</td>
             <td>0</td>
             <td>1</td>
         </tr>
         <tr>
             <td>55</td>
-            <td>Sharvari Santosh Sulakhe</td>
-            <td>0</td>
+            <td>Sara Jagdish Pardeshi</td>
             <td>1</td>
+            <td>0</td>
             <td>1</td>
         </tr>
         <tr>
