--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
 <body>
 <h2>GoogleCloudReady Facilitator Program Leaderboard - Mukesh Patel School of Technology Management & Engineering</h2>
 <br>
-<p>Details updated on May 23 2022 | 14:26 IST</p>
-<p>Webpage updated on May 23 2022 | 14:58 IST</p>
+<p>Details updated on May 24 2022 | 14:21 IST</p>
+<p>Webpage updated on May 24 2022 | 14:31 IST</p>
+<p>Note: Leaderboard will not be updated from May 26 2022 to May 31 2022</p>
 <br>
 <a target="_blank" href="https://events.withgoogle.com/googlecloudready-facilitator-program/#program-syllabus">PROGRAM SYLLABUS</a>
 <a target="_blank" href="https://github.com/guys-in-the-cloud/cloud-skill-boosts">SOLUTIONS</a>
@@ -43,17 +44,17 @@
     <tbody>
         <tr>
             <td>1</td>
-            <td>Yash Sutaria</td>
-            <td>36</td>
-            <td>16</td>
-            <td>52</td>
+            <td>Shaurya Saxena</td>
+            <td>37</td>
+            <td>18</td>
+            <td>55</td>
         </tr>
         <tr>
             <td>2</td>
-            <td>Shaurya Saxena</td>
-            <td>32</td>
-            <td>17</td>
-            <td>49</td>
+            <td>Yash Sutaria</td>
+            <td>37</td>
+            <td>16</td>
+            <td>53</td>
         </tr>
         <tr>
             <td>3</td>
@@ -65,16 +66,16 @@
         <tr>
             <td>4</td>
             <td>Monu Pawar</td>
-            <td>16</td>
+            <td>17</td>
             <td>10</td>
-            <td>26</td>
+            <td>27</td>
         </tr>
         <tr>
             <td>5</td>
             <td>Srijeev Bhowal</td>
-            <td>20</td>
-            <td>3</td>
-            <td>23</td>
+            <td>21</td>
+            <td>5</td>
+            <td>26</td>
         </tr>
         <tr>
             <td>6</td>
@@ -86,48 +87,48 @@
         <tr>
             <td>7</td>
             <td>Jaykumar Patel</td>
-            <td>12</td>
+            <td>14</td>
             <td>7</td>
-            <td>19</td>
+            <td>21</td>
         </tr>
         <tr>
             <td>8</td>
+            <td>Singu Aditya</td>
+            <td>15</td>
+            <td>5</td>
+            <td>20</td>
+        </tr>
+        <tr>
+            <td>9</td>
             <td>Akshat jain</td>
             <td>12</td>
             <td>6</td>
             <td>18</td>
         </tr>
         <tr>
-            <td>9</td>
-            <td>Singu Aditya</td>
-            <td>13</td>
-            <td>5</td>
-            <td>18</td>
+            <td>10</td>
+            <td>Aman Singh Bhogal</td>
+            <td>10</td>
+            <td>7</td>
+            <td>17</td>
         </tr>
         <tr>
-            <td>10</td>
+            <td>11</td>
+            <td>Komal Gokani</td>
+            <td>11</td>
+            <td>6</td>
+            <td>17</td>
+        </tr>
+        <tr>
+            <td>12</td>
             <td>Amruta Anil Patil</td>
             <td>9</td>
             <td>7</td>
             <td>16</td>
         </tr>
         <tr>
-            <td>11</td>
-            <td>Aditya Rajendra Hyalij</td>
-            <td>10</td>
-            <td>5</td>
-            <td>15</td>
-        </tr>
-        <tr>
-            <td>12</td>
-            <td>Aman Singh Bhogal</td>
-            <td>10</td>
-            <td>5</td>
-            <td>15</td>
-        </tr>
-        <tr>
             <td>13</td>
-            <td>Komal Gokani</td>
+            <td>Aditya Rajendra Hyalij</td>
             <td>10</td>
             <td>5</td>
             <td>15</td>
@@ -155,52 +156,52 @@
         </tr>
         <tr>
             <td>17</td>
+            <td>Bhushan Suresh Mahajan</td>
+            <td>10</td>
+            <td>2</td>
+            <td>12</td>
+        </tr>
+        <tr>
+            <td>18</td>
+            <td>Poornima Prakash Mahajan</td>
+            <td>12</td>
+            <td>0</td>
+            <td>12</td>
+        </tr>
+        <tr>
+            <td>19</td>
             <td>Dhruvi Sethi</td>
             <td>7</td>
             <td>4</td>
             <td>11</td>
         </tr>
         <tr>
-            <td>18</td>
+            <td>20</td>
+            <td>Ishwari Pramod Deore</td>
+            <td>11</td>
+            <td>0</td>
+            <td>11</td>
+        </tr>
+        <tr>
+            <td>21</td>
             <td>Jay Patil</td>
             <td>6</td>
             <td>5</td>
             <td>11</td>
         </tr>
         <tr>
-            <td>19</td>
-            <td>Poornima Prakash Mahajan</td>
-            <td>11</td>
-            <td>0</td>
-            <td>11</td>
-        </tr>
-        <tr>
-            <td>20</td>
+            <td>22</td>
             <td>Sparsh Khandelwal</td>
             <td>7</td>
             <td>4</td>
             <td>11</td>
         </tr>
         <tr>
-            <td>21</td>
-            <td>Ishwari Pramod Deore</td>
-            <td>10</td>
-            <td>0</td>
-            <td>10</td>
-        </tr>
-        <tr>
-            <td>22</td>
+            <td>23</td>
             <td>Simoni Thanvi</td>
             <td>6</td>
             <td>4</td>
             <td>10</td>
-        </tr>
-        <tr>
-            <td>23</td>
-            <td>Bhushan Suresh Mahajan</td>
-            <td>7</td>
-            <td>2</td>
-            <td>9</td>
         </tr>
         <tr>
             <td>24</td>
