--- a/index.html
+++ b/index.html
@@ -19,15 +19,18 @@
     =IF(AND(B2>=40,C2>=20),"ULTIMATE",IF(AND(B2>=30,C2>=15),3,IF(AND(B2>=20,C2>=10),2,IF(AND(B2>=10,C2>=5),1,""))))
 -->
 <body>
+<section id="abc">
+
 <h1>GoogleCloudReady Facilitator Program Leaderboard</h1>
 <h2>Mukesh Patel School of Technology Management & Engineering</h2>
 <br>
 <p>Details updated on June 01 2022 | 14:33 IST</p>
 <p>Webpage updated on June 01 2022 | 14:36 IST</p>
 <br>
-<a target="_blank" href="https://events.withgoogle.com/googlecloudready-facilitator-program/#program-syllabus">PROGRAM SYLLABUS</a>
+<a target="_blank" href="https://events.withgoogle.com/googlecloudready-facilitator-program/#program-syllabus" >PROGRAM SYLLABUS</a>
 <a target="_blank" href="https://github.com/guys-in-the-cloud/cloud-skill-boosts">SOLUTIONS</a>
 
+</section>
 <br>
 
 
