--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@
 <p>Details updated on June 01 2022 | 14:33 IST</p>
 <p>Webpage updated on June 01 2022 | 14:36 IST</p>
 <br>
-<a class="line" target="_blank" href="https://events.withgoogle.com/googlecloudready-facilitator-program/#program-syllabus" >PROGRAM SYLLABUS</a>
-<a class="line" target="_blank" href="https://github.com/guys-in-the-cloud/cloud-skill-boosts">SOLUTIONS</a>
+<a target="_blank" href="https://events.withgoogle.com/googlecloudready-facilitator-program/#program-syllabus" >Program Syllabus</a>
+<a target="_blank" href="https://github.com/guys-in-the-cloud/cloud-skill-boosts">Solutions</a>
 <br><br>
+
 </section>
 <br>
 
