--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <br>
 
 <h3>Find Your Name :</h3>
-<input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names..">
+<input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search...">
 <br><br>
 <table id="table">
     <thead>
