--- a/index.html
+++ b/index.html
@@ -1887,12 +1887,9 @@
 </table>
 <br>
 <br>
-<br>
-<br>
-<br>
-<a target="_blank" href="https://github.com/nityoday/gcr-leaderboard">Feel free to contribute</a>
-<div style="width: 30px; height: 30px;">
-GCR
+<section id="bcd"> 
+<b target="_blank" href="https://github.com/nityoday/gcr-leaderboard">Feel free to contribute</b>
+</section>
 </div>
 
 </body>
