--- a/index.html
+++ b/index.html
@@ -1888,7 +1888,7 @@
 <br>
 <br>
 <section id="bcd"> 
-<b target="_blank" href="https://github.com/nityoday/gcr-leaderboard">Feel free to contribute</b>
+<button target="_blank" onclick="location.href='https://github.com/nityoday/gcr-leaderboard'">Feel Free To Contribute</button>
 </section>
 </div>
 
