--- a/index.html
+++ b/index.html
@@ -1882,7 +1882,7 @@
 <br>
 <br>
 <br>
-<a target="_blank" href="https://github.com/nityoday/gcr-leaderboard">Feel free to contribute</a>
+<a target="_blank" href="https://github.com/nityoday/gcr-leaderboard">CONTRIBUTE TO THIS WEBPAGE</a>
 <div style="width: 30px; height: 30px;">
 GCR
 </div>
