--- a/index.html
+++ b/index.html
@@ -1888,9 +1888,8 @@
 <br>
 <br>
 <section id="bcd"> 
-<button target="_blank" onclick="location.href='https://github.com/nityoday/gcr-leaderboard'">Feel Free To Contribute</button>
+<button target="_blank" onclick="location.href='https://github.com/nityoday/gcr-leaderboard'" id="lol">Feel Free To Contribute</button>
 </section>
 </div>
-
 </body>
 </html>
