--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
     =IF(AND(B2>=40,C2>=20),"ULTIMATE",IF(AND(B2>=30,C2>=15),3,IF(AND(B2>=20,C2>=10),2,IF(AND(B2>=10,C2>=5),1,""))))
 -->
 <body>
-<section id="abc">
-
+<section id="top">
 <h1>GoogleCloudReady Facilitator Program Leaderboard</h1>
 <h2>Mukesh Patel School of Technology Management & Engineering</h2>
 <br>
@@ -1887,8 +1886,8 @@
 </table>
 <br>
 <br>
-<section id="bcd"> 
-<button target="_blank" onclick="location.href='https://github.com/nityoday/gcr-leaderboard'" id="lol">Feel Free To Contribute</button>
+<section id="bottom"> 
+<button target="_blank" onclick="location.href='https://github.com/nityoday/gcr-leaderboard'" id="bid">Feel Free To Contribute</button>
 </section>
 </div>
 </body>
