Changed Button Elements

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 <p>Details updated on June 06 2022 | 14:08 IST</p>
 <p>Webpage updated on June 06 2022 | 17:28 IST</p>
 <br>
-<a target="_blank" href="https://events.withgoogle.com/googlecloudready-facilitator-program/#program-syllabus" >Program Syllabus</a>
-<a target="_blank" href="https://github.com/guys-in-the-cloud/cloud-skill-boosts">Solutions</a>
+<a target="_blank" href="https://events.withgoogle.com/googlecloudready-facilitator-program/#program-syllabus" >PROGRAM SYLLABUS</a>
+<a target="_blank" href="https://github.com/guys-in-the-cloud/cloud-skill-boosts">SOLUTIONS</a>
 <br><br>
 
 </section>
@@ -1887,7 +1887,7 @@
 <br>
 <br>
 <section id="bottom"> 
-<button target="_blank" onclick="location.href='https://github.com/nityoday/gcr-leaderboard'" id="bid">Contribute To This Page!</button>
+<button target="_blank" onclick="location.href='https://github.com/nityoday/gcr-leaderboard'" id="bid">CONTRIBUTE TO THIS PAGE</button>
 </section>
 </div>
 </body>
