--- a/index.html
+++ b/index.html
@@ -1889,6 +1889,14 @@
 <section id="bottom"> 
 <button target="_blank" onclick="location.href='https://github.com/nityoday/gcr-leaderboard'" id="bid">CONTRIBUTE TO THIS PAGE</button>
 </section>
+<section id="bottom"> 
+    <h3 style="color: white;">Contributors:</h3>
+    <div style="width: 30px;"></div>
+    <a style="margin-bottom: 30px;" href="https://github.com/nityoday/GCR-leaderboard/graphs/contributors">
+        <img src="https://contrib.rocks/image?repo=nityoday/GCR-leaderboard" />
+    </a>
+   
+</section>
 </div>
 </body>
 </html>
