--- a/index.html
+++ b/index.html
@@ -1892,7 +1892,7 @@
 <section id="bottom"> 
     <h4 style="color: white;">Contributors :</h4>
     <div style="width: 30px;"></div>
-    <b style="margin-bottom: 30px;" href="https://github.com/nityoday/GCR-leaderboard/graphs/contributors">
+    <b href="https://github.com/nityoday/GCR-leaderboard/graphs/contributors">
         <img src="https://contrib.rocks/image?repo=nityoday/GCR-leaderboard" />
     </b>
 </section>
