--- a/index.html
+++ b/index.html
@@ -1893,7 +1893,7 @@
     <h4 style="color: white;">Contributors :</h4>
     <div style="width: 30px;"></div>
     <b href="https://github.com/nityoday/GCR-leaderboard/graphs/contributors">
-        <img src="https://contrib.rocks/image?repo=nityoday/GCR-leaderboard" />
+        <img src="https://contrib.rocks/image?repo=nityoday/GCR-leaderboard" alt="contributors">
     </b>
 </section>
 </div>
