--- a/index.html
+++ b/index.html
@@ -1892,9 +1892,9 @@
 <section id="bottom"> 
     <h4 style="color: white;">Contributors :</h4>
     <div style="width: 30px;"></div>
-    <b href="https://github.com/nityoday/GCR-leaderboard/graphs/contributors">
+    <a href="https://www.google.com">
         <img src="https://contrib.rocks/image?repo=nityoday/GCR-leaderboard" alt="contributors">
-    </b>
+    </a>
 </section>
 </div>
 </body>
