--- a/index.html
+++ b/index.html
@@ -1892,8 +1892,8 @@
 <section id="bottom"> 
     <h4 style="color: white;">Contributors :</h4>
     <div style="width: 30px;"></div>
-    <a href="https://www.google.com">
-        <img src="https://contrib.rocks/image?repo=nityoday/GCR-leaderboard" alt="contributors">
+    <a href="https://github.com/nityoday/GCR-leaderboard/graphs/contributors">
+        <img src="https://contrib.rocks/image?repo=nityoday/GCR-leaderboard" alt="contributors" ">
     </a>
 </section>
 </div>
