--- a/index.html
+++ b/index.html
@@ -1892,7 +1892,7 @@
 <section id="bottom"> 
     <h4 style="color: white;">Contributors :</h4>
     <div style="width: 30px;"></div>
-    <a href="https://github.com/nityoday/GCR-leaderboard/graphs/contributors">
+    <a target="_blank" href="https://github.com/nityoday/GCR-leaderboard/graphs/contributors">
         <img src="https://contrib.rocks/image?repo=nityoday/GCR-leaderboard" alt="contributors" ">
     </a>
 </section>
