--- a/index.html
+++ b/index.html
@@ -1887,12 +1887,12 @@
 <br>
 <br>
 <section id="bottom"> 
-<button target="_blank" onclick="location.href='https://github.com/nityoday/gcr-leaderboard'" id="bid">CONTRIBUTE TO THIS PAGE</button>
+<button target="_blank" onclick="window.open('https://github.com/nityoday/gcr-leaderboard');" id="bid">CONTRIBUTE TO THIS PAGE</button>
 </section>
 <section id="bottom"> 
     <h4 style="color: white;">Contributors :</h4>
     <div style="width: 30px;"></div>
-    <a href="https://github.com/nityoday/GCR-leaderboard/graphs/contributors">
+    <a  target="_blank" href="https://github.com/nityoday/GCR-leaderboard/graphs/contributors">
         <img src="https://contrib.rocks/image?repo=nityoday/GCR-leaderboard" alt="contributors" ">
     </a>
 </section>
